src/snapshots/pepper__tests__mir_tests@fib.snap
---
source: src/main.rs
description: "func main() -> int =\n    fib(10)\n\nfunc fib(n: int) -> int =\n    match n\n    | x where x < 2 => x\n    | _ => fib(n - 1) + fib(n - 2)"
expression: mir
info: tests/mir/fib.pr
snapshot_kind: text
---
functions:
  - name: 0
    params: []
    return_ty:
      Primitive: Int
    body:
      expr:
        Call:
          callee:
            expr:
              Variable: 1
            ty:
              Function:
                params:
                  - Primitive: Int
                return_ty:
                  Primitive: Int
          args:
            - expr:
                Int: 10
              ty:
                Primitive: Int
      ty:
        Primitive: Int
  - name: 1
    params:
      - name: 2
        ty:
          Primitive: Int
    return_ty:
      Primitive: Int
    body:
      expr:
        Match:
          expr:
            expr:
              Variable: 2
            ty:
              Primitive: Int
          arms:
            - pattern:
                pattern_type:
                  Variable: 3
                condition:
                  expr:
                    Intrinsic:
                      LtInts:
                        lhs:
                          expr:
                            Variable: 3
                          ty:
                            Primitive: Int
                        rhs:
                          expr:
                            Int: 2
                          ty:
                            Primitive: Int
                  ty:
                    Primitive: Bool
              body:
                expr:
                  Variable: 3
                ty:
                  Primitive: Int
            - pattern:
                pattern_type: Wildcard
                condition: ~
              body:
                expr:
                  Intrinsic:
                    AddInts:
                      lhs:
                        expr:
                          Call:
                            callee:
                              expr:
                                Variable: 1
                              ty:
                                Function:
                                  params:
                                    - Primitive: Int
                                  return_ty:
                                    Primitive: Int
                            args:
                              - expr:
                                  Intrinsic:
                                    SubInts:
                                      lhs:
                                        expr:
                                          Variable: 2
                                        ty:
                                          Primitive: Int
                                      rhs:
                                        expr:
                                          Int: 1
                                        ty:
                                          Primitive: Int
                                ty:
                                  Primitive: Int
                        ty:
                          Primitive: Int
                      rhs:
                        expr:
                          Call:
                            callee:
                              expr:
                                Variable: 1
                              ty:
                                Function:
                                  params:
                                    - Primitive: Int
                                  return_ty:
                                    Primitive: Int
                            args:
                              - expr:
                                  Intrinsic:
                                    SubInts:
                                      lhs:
                                        expr:
                                          Variable: 2
                                        ty:
                                          Primitive: Int
                                      rhs:
                                        expr:
                                          Int: 2
                                        ty:
                                          Primitive: Int
                                ty:
                                  Primitive: Int
                        ty:
                          Primitive: Int
                ty:
                  Primitive: Int
      ty:
        Primitive: Int
