src/snapshots/pepper__tests__mir_tests@function_types.snap
---
source: src/main.rs
description: "func main() -> number =\n    takes_bin_op(neg, returns_bin_op())\n\nfunc takes_bin_op(un: func (number) -> number, bin: func (number, number) -> number) -> number =\n    bin(takes_un_op(un, 1), takes_un_op(un, 2))\n\nfunc returns_bin_op() -> func (number, number) -> number =\n    multiply\n\nfunc takes_un_op(op: func (number) -> number, n: number) -> number =\n    op(n)\n\nfunc neg(n: number) -> number =\n    -n\n\nfunc multiply(a: number, b: number) -> number =\n    a * b"
expression: mir
info: tests/mir/function_types.pr
snapshot_kind: text
---
functions:
  - name: 0
    params: []
    return_ty:
      Primitive: Number
    body:
      expr:
        Call:
          callee:
            expr:
              Variable: 1
            ty:
              Function:
                params:
                  - Function:
                      params:
                        - Primitive: Number
                      return_ty:
                        Primitive: Number
                  - Function:
                      params:
                        - Primitive: Number
                        - Primitive: Number
                      return_ty:
                        Primitive: Number
                return_ty:
                  Primitive: Number
          args:
            - expr:
                Variable: 4
              ty:
                Function:
                  params:
                    - Primitive: Number
                  return_ty:
                    Primitive: Number
            - expr:
                Call:
                  callee:
                    expr:
                      Variable: 2
                    ty:
                      Function:
                        params: []
                        return_ty:
                          Function:
                            params:
                              - Primitive: Number
                              - Primitive: Number
                            return_ty:
                              Primitive: Number
                  args: []
              ty:
                Function:
                  params:
                    - Primitive: Number
                    - Primitive: Number
                  return_ty:
                    Primitive: Number
      ty:
        Primitive: Number
  - name: 1
    params:
      - name: 6
        ty:
          Function:
            params:
              - Primitive: Number
            return_ty:
              Primitive: Number
      - name: 7
        ty:
          Function:
            params:
              - Primitive: Number
              - Primitive: Number
            return_ty:
              Primitive: Number
    return_ty:
      Primitive: Number
    body:
      expr:
        Call:
          callee:
            expr:
              Variable: 7
            ty:
              Function:
                params:
                  - Primitive: Number
                  - Primitive: Number
                return_ty:
                  Primitive: Number
          args:
            - expr:
                Call:
                  callee:
                    expr:
                      Variable: 3
                    ty:
                      Function:
                        params:
                          - Function:
                              params:
                                - Primitive: Number
                              return_ty:
                                Primitive: Number
                          - Primitive: Number
                        return_ty:
                          Primitive: Number
                  args:
                    - expr:
                        Variable: 6
                      ty:
                        Function:
                          params:
                            - Primitive: Number
                          return_ty:
                            Primitive: Number
                    - expr:
                        Number: 1
                      ty:
                        Primitive: Number
              ty:
                Primitive: Number
            - expr:
                Call:
                  callee:
                    expr:
                      Variable: 3
                    ty:
                      Function:
                        params:
                          - Function:
                              params:
                                - Primitive: Number
                              return_ty:
                                Primitive: Number
                          - Primitive: Number
                        return_ty:
                          Primitive: Number
                  args:
                    - expr:
                        Variable: 6
                      ty:
                        Function:
                          params:
                            - Primitive: Number
                          return_ty:
                            Primitive: Number
                    - expr:
                        Number: 2
                      ty:
                        Primitive: Number
              ty:
                Primitive: Number
      ty:
        Primitive: Number
  - name: 2
    params: []
    return_ty:
      Function:
        params:
          - Primitive: Number
          - Primitive: Number
        return_ty:
          Primitive: Number
    body:
      expr:
        Variable: 5
      ty:
        Function:
          params:
            - Primitive: Number
            - Primitive: Number
          return_ty:
            Primitive: Number
  - name: 3
    params:
      - name: 8
        ty:
          Function:
            params:
              - Primitive: Number
            return_ty:
              Primitive: Number
      - name: 9
        ty:
          Primitive: Number
    return_ty:
      Primitive: Number
    body:
      expr:
        Call:
          callee:
            expr:
              Variable: 8
            ty:
              Function:
                params:
                  - Primitive: Number
                return_ty:
                  Primitive: Number
          args:
            - expr:
                Variable: 9
              ty:
                Primitive: Number
      ty:
        Primitive: Number
  - name: 4
    params:
      - name: 10
        ty:
          Primitive: Number
    return_ty:
      Primitive: Number
    body:
      expr:
        Intrinsic:
          NegNumber:
            expr:
              expr:
                Variable: 10
              ty:
                Primitive: Number
      ty:
        Primitive: Number
  - name: 5
    params:
      - name: 11
        ty:
          Primitive: Number
      - name: 12
        ty:
          Primitive: Number
    return_ty:
      Primitive: Number
    body:
      expr:
        Intrinsic:
          MulNumbers:
            lhs:
              expr:
                Variable: 11
              ty:
                Primitive: Number
            rhs:
              expr:
                Variable: 12
              ty:
                Primitive: Number
      ty:
        Primitive: Number
