src/snapshots/pepper__tests__parser_tests@tests_parser_function_signatures_multiple_functions.pr.snap
---
source: src/lib.rs
description: "func multiple_params(a Int32, bb Float32, ccc Bool) = ()\n\nfunc return_type_path() aa.b.Ccc = aa.b.Ccc"
expression: ast.unwrap()
input_file: tests/parser/function_signatures/multiple_functions.pr
snapshot_kind: text
---
- Function:
    name: multiple_params
    generics: ~
    params:
      - name: a
        ty:
          Primitive:
            name:
              base: Int32
              segments: []
            generics: ~
      - name: bb
        ty:
          Primitive:
            name:
              base: Float32
              segments: []
            generics: ~
      - name: ccc
        ty:
          Primitive:
            name:
              base: Bool
              segments: []
            generics: ~
    return_ty: ~
    body:
      Tuple: []
- Function:
    name: return_type_path
    generics: ~
    params: []
    return_ty:
      Primitive:
        name:
          base: aa
          segments:
            - b
            - Ccc
        generics: ~
    body:
      Dot:
        expr:
          Dot:
            expr:
              Name: aa
            field: b
        field: Ccc
