src/snapshots/pepper__tests__parser_tests@tests_parser_function_signatures_params_and_return.pr.snap
---
source: src/lib.rs
description: "func params_and_return(float_var Float32, path abcd.Efgh) Int32 = ()"
expression: ast.unwrap()
input_file: tests/parser/function_signatures/params_and_return.pr
snapshot_kind: text
---
- Function:
    name: params_and_return
    generics: ~
    params:
      - name: float_var
        ty:
          Primitive:
            name:
              base: Float32
              segments: []
            generics: ~
      - name: path
        ty:
          Primitive:
            name:
              base: abcd
              segments:
                - Efgh
            generics: ~
    return_ty:
      Primitive:
        name:
          base: Int32
          segments: []
        generics: ~
    body:
      Tuple: []
