src/snapshots/pepper__tests__parser_tests@tests_parser_idents_weird_idents.pr.snap
---
source: src/lib.rs
description: "func __a_A123_1Aa__abhxjjid() =\n    var _a = 3 in\n\n    match _a\n    | 3 => (\n        var _______ = 3 in\n        var _______aaaa = 3 in\n        var _ = 3 in\n        ()\n    )\n    | _ => (\n        var _ = __123 in\n        ()\n    )"
expression: ast.unwrap()
input_file: tests/parser/idents/weird_idents.pr
snapshot_kind: text
---
- Function:
    name: __a_A123_1Aa__abhxjjid
    params: []
    return_ty: ~
    body:
      Binding:
        name: _a
        ty: ~
        value:
          Int: "3"
        body:
          Match:
            expr:
              Name:
                base: _a
                segments: []
            arms:
              - pattern:
                  pattern_type:
                    Int: "3"
                  condition: ~
                body:
                  Binding:
                    name: _______
                    ty: ~
                    value:
                      Int: "3"
                    body:
                      Binding:
                        name: _______aaaa
                        ty: ~
                        value:
                          Int: "3"
                        body:
                          Binding:
                            name: _
                            ty: ~
                            value:
                              Int: "3"
                            body:
                              Tuple: []
              - pattern:
                  pattern_type:
                    Name:
                      base: _
                      segments: []
                  condition: ~
                body:
                  Binding:
                    name: _
                    ty: ~
                    value:
                      Name:
                        base: __123
                        segments: []
                    body:
                      Tuple: []
