src/snapshots/pepper__tests__parser_tests@tests_parser_match_simple_number.pr.snap
---
source: src/lib.rs
description: "func simple_number(n Int32) Int32 =\n    match n\n    | 2 => 2\n    | n => n / 2"
expression: ast.unwrap()
input_file: tests/parser/match/simple_number.pr
snapshot_kind: text
---
- Function:
    name: simple_number
    generics: ~
    params:
      - name: n
        ty:
          Primitive:
            name:
              base: Int32
              segments: []
            generics: ~
    return_ty:
      Primitive:
        name:
          base: Int32
          segments: []
        generics: ~
    body:
      Match:
        expr:
          Name: n
        arms:
          - pattern:
              pattern_type:
                Int: "2"
              condition: ~
            body:
              Int: "2"
          - pattern:
              pattern_type:
                Name:
                  base: n
                  segments: []
              condition: ~
            body:
              BinaryOp:
                op: Div
                lhs:
                  Name: n
                rhs:
                  Int: "2"
